# blockfrost-platform

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  docker-compose.yml  flake.nix
.cargo/: audit.toml
.githooks/: pre-commit
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yaml  git-checks.yaml  hydra-nightly.yml  nix-ci.yaml  oci-image.yaml  release.yml
config/: development-mainnet.toml  development-nainnet.toml  development-preprod.toml  development-preview.toml  development.toml
crates/api_provider/src/: types.rs
crates/build_utils/src/: lib.rs  target.rs  testgen_hs.rs
crates/common/: Cargo.toml
crates/common/src/: find_libexec.rs  lib.rs  tracing.rs  types.rs
crates/data_node/src/: api.rs  client.rs
crates/data_node/src/api/: accounts.rs  addresses.rs  assets.rs  epochs.rs  pools.rs  scripts.rs
crates/error_decoder/: Cargo.toml  README.md  build.rs
crates/error_decoder/src/: external.rs  lib.rs  tests.rs
crates/error_decoder/src/tests/: random.rs  specific.rs
crates/gateway/: CHANGELOG.md  Cargo.toml  README.md
crates/gateway/config/: development.toml  production.toml
crates/gateway/src/: blockfrost.rs  config.rs  db.rs  errors.rs  lib.rs  load_balancer.rs  main.rs  sdk_bridge_ws.rs
crates/gateway/src/api/: metrics.rs  mod.rs  register.rs
crates/gateway/src/hydra_server_bridge/: mod.rs
crates/gateway/src/hydra_server_platform/: verifications.rs
crates/gateway/src/middlewares/: metrics.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/gateway/: mod.rs
crates/integration_tests/src/platform/: mod.rs
crates/integration_tests/tests/: e2e_websocket.rs  gateway_load_balancer.rs
crates/integration_tests/tests/data/: ignored_tests.json  supported_endpoints.json
crates/node/: Cargo.toml
crates/node/src/: pool.rs
crates/node/src/cbor/: validation.rs
crates/platform/: Cargo.toml
crates/platform/src/: accounts.rs  addresses.rs  assets.rs  blocks.rs  cli.rs  config.rs  dreps.rs  epochs.rs  genesis.rs  lib.rs  load_balancer.rs  main.rs  payment_cred.rs  pools.rs  server.rs  validation.rs
crates/platform/src/api/accounts/stake_address/: delegations.rs  history.rs  mirs.rs  registrations.rs  rewards.rs  root.rs  utxos.rs  withdrawals.rs
crates/platform/src/api/accounts/stake_address/addresses/: assets.rs  root.rs  total.rs
crates/platform/src/api/addresses/: address.rs
crates/platform/src/api/addresses/address/: extended.rs  root.rs  total.rs  transactions.rs  txs.rs
crates/platform/src/api/addresses/address/utxos/: asset.rs  root.rs
crates/platform/src/api/assets/asset/: addresses.rs  history.rs  root.rs  transactions.rs
crates/platform/src/api/blocks/hash_or_number/: addresses.rs  next.rs  previous.rs  root.rs  txs.rs
crates/platform/src/api/blocks/slot/: slot_number.rs
crates/platform/src/api/epochs/number/: parameters.rs
crates/platform/src/api/epochs/number/blocks/: root.rs
crates/platform/src/api/governance/dreps/: root.rs
crates/platform/src/api/governance/dreps/drep_id/: root.rs
crates/platform/src/api/ledger/: genesis.rs
crates/platform/src/api/metadata/txs/label/: cbor.rs  root.rs
crates/platform/src/api/pools/pool_id/: delegators.rs  history.rs  metadata.rs  root.rs
crates/platform/src/api/scripts/datum/datum_hash/: cbor.rs  root.rs
crates/platform/src/api/scripts/script_hash/: cbor.rs  json.rs  root.rs
crates/platform/src/api/tx/: submit.rs
crates/platform/src/api/txs/hash/: cbor.rs  delegations.rs  mirs.rs  pool_retires.rs  pool_updates.rs  redeemers.rs  root.rs  stakes.rs  utxos.rs  withdrawals.rs
crates/platform/src/api/txs/hash/metadata/: cbor.rs  root.rs
crates/platform/src/hydra_client/: mod.rs
crates/platform/src/icebreakers/: api.rs  manager.rs
crates/platform/src/server/: state.rs
crates/platform/src/server/routes/: hidden.rs
crates/sdk_bridge/src/: http_proxy.rs
crates/sdk_bridge/src/hydra_client/: verifications.rs
crates/testgen/: Cargo.toml  README.md
crates/testgen/src/: lib.rs  testgen.rs  tests.rs
docs/: .eslintrc  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  remark-prefix-locale-links.mjs  theme.config.tsx  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
docs/pages/: _meta.js  index.mdx
docs/src/: styles.css
docs/src/app/: layout.tsx  page.tsx
docs/src/app/[lang]/: layout.tsx
docs/src/app/[lang]/[[...mdxPath]]/: page.tsx
docs/src/components/: VersionBadge.tsx
docs/src/content/: icebreakers.mdx
docs/src/content/en/: data-node.mdx  faq.mdx  get-started.mdx  icebreakers.mdx  verification.md
docs/src/content/installation/: nix.md  source.mdx
docs/src/content/ja/: _meta.js  budget.mdx  configuration.mdx  data-node.mdx  faq.mdx  get-started.mdx  icebreakers.mdx  index.mdx  options.md  roadmap.mdx  usecases.mdx  verification.md
docs/src/pages/: _meta.js  devshell.md  docker.md  faq.mdx  get-started.mdx  index.mdx  installation.md  options.md  usage.md
docs/src/pages/installation/: _meta.js  docker.md  nix.md  source.mdx
docs/src/pages/usage/: _meta.js  cli.mdx  docker.mdx
nix/: devshells.nix  mithril-entrypoint.sh
nix/internal/: curl-bash-install.sh  darwin-terminal-init.sh  darwin.nix  hydra-bridge-gateway-test.sh  hydra-platform-gateway-test.sh  linux.nix  platform-gateway-ha-test.sh  tx-build.sh  unix.nix  windows-installer.nsi  windows-nsis.nix  windows.nix
nix/internal/homebrew-tap/Formula/: blockfrost-platform.rb
src/: api.rs  background_tasks.rs  cbor.rs  cli.rs  common.rs  config.rs  errors.rs  icebreakers.rs  icebreakers_api.rs  lib.rs  logging.rs  main.rs  node.rs  router.rs  server.rs
src/api/: metrics.rs  mod.rs  root.rs  tx_submit.rs
src/api/tx/: submit.rs
src/cbor/: codec.rs  fallback_decoder.rs  haskell_types.rs
src/middlewares/: errors.rs  metrics.rs
src/node/: connection.rs  pool.rs  pool_manager.rs  sync.rs  sync_progress.rs  transactions.rs
tests/: common.rs  endpoint_root.rs  endpoints_test.rs  integration_routes_test.rs  integration_test.rs
(+10 files in other folders)
