[package]
name = "blockfrost-platform"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.6"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0.210", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["full"] }
tower-layer = "0.3.2"
tower = "0.5.1"
serde_json = "1.0.122"
clap = { version = "4.5.18", features = ["derive"] }
toml = "0.8.19"
thiserror = "1.0.64"
sentry = "0.34.0"
blake2 = "0.10.6"
pallas-network = "0.30.2"
pallas-crypto = "0.30.2"
pallas-traverse = "0.30.2"
pallas-codec = "0.30.2"
reqwest = "0.12.7"
pallas = "0.30.2"
hex = "0.4.3"
cbor = "0.4.1"
pallas-primitives = "0.30.2"
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.16", default-features = false }
chrono = "0.4"
deadpool = "0.12.1"

[dev-dependencies]
rstest = "0.22.0"
pretty_assertions = "1.4.1"

[target.'cfg(target_env = "musl")'.dependencies]
jemalloc = "0.3"
