[package]
name = "blockfrost-platform"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
serde = { version = "1.0.217", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["normalize-path"] }
tower-layer = "0.3.2"
tower = "0.5.1"
serde_json = "1.0.135"
clap = { version = "4.5.26", features = ["derive"] }
toml = "0.8.19"
thiserror = "2.0.11"
sentry = "0.36.0"
blake2 = "0.10.6"
pallas-network = "0.32.0"
pallas-crypto = "0.32.0"
pallas-traverse = "0.32.0"
pallas-codec = "0.32.0"
reqwest = "0.12.12"
pallas = "0.32.0"
hex = "0.4.3"
cbor = "0.4.1"
pallas-primitives = "0.32.0"
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16.1", default-features = false }
chrono = "0.4"
deadpool = "0.12.1"
serde_with = "3.12.0"
sysinfo = "0.33.1"
walkdir = "2.5.0"
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v4"] }
twelf = { version = "0.15.0", features = ["clap", "toml"] }
dirs = "5.0"
inquire = "0.7.5"
anyhow = "1.0.95"

[dev-dependencies]
tracing-test = "0.2.5"
rstest = "0.24.0"
pretty_assertions = "1.4.1"

[target.'cfg(target_env = "musl")'.dependencies]
jemalloc = "0.3"

[build-dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
dirs = "5.0"
bzip2 = "0.4.3"
tar = "0.4.38"
zip = "0.6.6"
