[package]
name = "blockfrost-platform-common"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bech32.workspace = true
bf-api-provider.workspace = true
blake3.workspace = true
bytes.workspace = true
cardano-serialization-lib.workspace = true
clap.workspace = true
getrandom.workspace = true
hex.workspace = true
machine-uid.workspace = true
nix = { workspace = true }
pallas-network.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
tokio.workspace = true

[build-dependencies]
bf-build-utils.workspace = true

[lints]
workspace = true
