[package]
name = "blockfrost-platform-error-decoder"
version.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
bf-common.workspace = true
bf-testgen.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
tarpaulin = []

[build-dependencies]
bf-build-utils.workspace = true

[dev-dependencies]
bf-testgen = { workspace = true, features = ["test-utils"] }
sysinfo.workspace = true
pallas-network.workspace = true
pallas-hardano.workspace = true
pallas-codec.workspace = true
