[package]
name = "blockfrost-platform"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "The Blockfrost platform transforms your Cardano node infrastructure into a high-performance JSON API endpoint."
homepage = "https://platform.blockfrost.io"
repository = "https://github.com/blockfrost/blockfrost-platform"
build = "build.rs"

[dependencies]
bf-common.workspace = true
bf-node.workspace = true
bf-data-node.workspace = true
bf-api-provider.workspace = true

anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bech32.workspace = true
cardano-serialization-lib.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
dotenvy.workspace = true
futures.workspace = true
futures-util.workspace = true
hex.workspace = true
hyper.workspace = true
inquire.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-process.workspace = true
pallas-addresses.workspace = true
pallas-codec.workspace = true
pallas-network.workspace = true
reqwest.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tokio-util.workspace = true
toml.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
tungstenite = { workspace = true, features = ["native-tls"] }
twelf.workspace = true
uuid.workspace = true

[dev-dependencies]
bf-api-provider.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
rstest.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
jemalloc.workspace = true

[build-dependencies]
bf-build-utils.workspace = true

[package.metadata.cargo-shear]
ignored = ["jemalloc"] # musl-only conditional dependency

[lints]
workspace = true
