[package]
name = "blockfrost-platform-testgen"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bf-common.workspace = true
serde.workspace = true
tracing.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio.workspace = true
num_cpus.workspace = true
crossbeam.workspace = true

[features]
tarpaulin = []
test-utils = []
